[project]
name = "uncond-ts-diff"
version = "0.1.0"
description = "TSDiff: An Unconditional Diffusion Model for Time Series"
authors = []
dependencies = [
    "torch",
    "torchvision",
    "pytorch-lightning",
    "gluonts[mxnet,pro]<0.15",
    "matplotlib",
    "seaborn",
    "opt_einsum",
    "einops",
    "black",
    "tqdm",
    "scipy",
    "scikit-learn",
    "numba",
    "jupyter",
    "rich",
    "pykeops",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.black]
line-length = 79
packages = [
    { include = "uncond_ts_diff", from = "src" }
]